--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongoose-autopopulate": "^1.1.0",
     "mongoose-sequence": "^6.0.1",
     "multer": "^2.0.1",
+    "node-cron": "^4.2.1",
     "nodemailer": "^7.0.3",
     "nodemon": "^3.1.10",
     "pdfkit": "^0.17.1",
